--- a/PCA/PCA/Views/Admin/Index.cshtml
+++ b/PCA/PCA/Views/Admin/Index.cshtml
@@ -23,7 +23,7 @@
             <li><a href="/Positions/Index">Positions</a></li>
             <li><a href="/Projects/Index">Projects</a></li>
             <li><a href="/States/Index">States</a></li>
-            <li><a href="/SubPhase/Index">SubPhases</a></li>
+            <li><a href="/SubPhases/Index">SubPhases</a></li>
             <li><a href="/WorkItems/Index">WorkItems</a></li>
         </ul>
 
