--- a/PCA/PCA/Views/Admin/Index.cshtml
+++ b/PCA/PCA/Views/Admin/Index.cshtml
@@ -16,7 +16,12 @@
             <li><a href="/Assignments/Index">Assignments</a></li>
             <li><a href="/Budgets/Index">Budgets</a></li>
             <li><a href="/Clients/Index">Clients</a></li>
+            <li><a href="/Contracts/Index">Contracts</a></li>
+            <li><a href="/ContractCostPhases/Index">ContractCostPhase</a></li>
+            <li><a href="/ContractExhibits/Index">ContractExhibit</a></li>
             <li><a href="/Contractors/Index">Contractors</a></li>
+            <li><a href="/ContractorTypes/Index">ContractorTypes</a></li>
+            <li><a href="/ContractorTypeUnions/Index">ContractorTypeUnions</a></li>
             <li><a href="/DailyReports/Index">DailyReports</a></li>
             <li><a href="/Invoices/Index">Invoices</a></li>
             <li><a href="/Phases/Index">Phases</a></li>
