--- a/PCA/PCA/Views/Invoices/Create.cshtml
+++ b/PCA/PCA/Views/Invoices/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Invoices", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -100,6 +100,13 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Status, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label("InvoiceImage", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input type="file" id="InvoiceImage" name="upload" />
             </div>
         </div>
 
