--- a/PCA/PCA/Views/Invoices/Details.cshtml
+++ b/PCA/PCA/Views/Invoices/Details.cshtml
@@ -11,6 +11,16 @@
     <h4>Invoice</h4>
     <hr />
     <dl class="dl-horizontal">
+        @if (Model.Files.Any(f => f.FileType == FileType.InvoiceImage))
+        {
+            <dt>
+                 Image
+            </dt>
+            <dd>
+                <img src="~/File?id=@Model.Files.First(f => f.FileType == FileType.InvoiceImage).FileId" alt="invoice" />
+            </dd>
+        }
+
         <dt>
             @Html.DisplayNameFor(model => model.Contractors.Name)
         </dt>
