--- a/PCA/PCA/Views/Contract/Index.cshtml
+++ b/PCA/PCA/Views/Contract/Index.cshtml
@@ -16,7 +16,7 @@
     </button>
     <ul class="dropdown-menu" aria-labelledby="reportDropDown">
         <li class="dropdown-header">Primary Contracts</li>
-        <li><a href="/Contract/General" target="_blank">General Conditions</a></li>
+        <li><a href="/Contract/GeneralConditionReport" target="_blank">General Conditions</a></li>
         <li><a href="#">Materials Purchase Order</a></li>
         <li><a href="#">Budget Change Order</a></li>
         <li class="dropdown-header">Sub Contracts</li>
