--- a/PCA/PCA/Views/Contracts/Delete.cshtml
+++ b/PCA/PCA/Views/Contracts/Delete.cshtml
@@ -68,6 +68,22 @@
             @Html.DisplayFor(model => model.ContractorSignDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.TotalAmount)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TotalAmount)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TotalAmountLiteral)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TotalAmountLiteral)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
