--- a/PCA/PCA/Views/Contracts/Details.cshtml
+++ b/PCA/PCA/Views/Contracts/Details.cshtml
@@ -67,6 +67,22 @@
             @Html.DisplayFor(model => model.ContractorSignDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.TotalAmount)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TotalAmount)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TotalAmountLiteral)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TotalAmountLiteral)
+        </dd>
+
     </dl>
 </div>
 <p>
