--- a/PCA/PCA/Views/Shared/_LayoutEmpty.cshtml
+++ b/PCA/PCA/Views/Shared/_LayoutEmpty.cshtml
@@ -22,11 +22,11 @@
         </div>
 
         <!-- End Body -->
-        <!-- Footer -->
+        <!-- Footer
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Planning & Construction Associates Inc.</p>
-        </footer>
+        </footer> -->
     </div>
 
     @Scripts.Render("~/bundles/jquery")
