--- a/PCA/PCA/Views/Invoice/Edit.cshtml
+++ b/PCA/PCA/Views/Invoice/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Invoice", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -108,6 +108,30 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </div>
+
+        @*<div class="form-group">
+            @Html.Label("InvoiceImage", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input type="file" id="InvoiceImage" name="upload" />
+            </div>
+        </div>*@
+
+        @if (Model.Files.Any(f => f.FileType == FileType.InvoiceImage))
+        {
+            <div class="form-group">
+                <span class="control-label col-md-2"><strong>Current Invoice</strong></span>
+                <div class="col-md-10">
+                    <img src="~/File?id=@Model.Files.First(f => f.FileType == FileType.InvoiceImage).FileId" alt="avatar" />
+                </div>
+            </div>
+        }
+
+        <div class="form-group">
+            @Html.Label("InvoiceImage", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input type="file" id="InvoiceImage" name="upload" />
             </div>
         </div>
     </div>
