--- a/PCA/PCA/Views/Contract/Index.cshtml
+++ b/PCA/PCA/Views/Contract/Index.cshtml
@@ -55,7 +55,7 @@
                         <td>@string.Format("{0:C}", @contract.TotalAmount)</td>
                         <td>
                             <div class="btn-group" role="group" aria-label="...">
-                                <a href="/Invoice/Details/@contract.ContractId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-info-sign"></span></a>
+                                <a href="/Contract/Details/@contract.ContractId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-info-sign"></span></a>
                                 <a href="/Invoice/Edit/@contract.ContractId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
                                 <a href="/Invoice/Delete/@contract.ContractId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></a>
                                 <a href="/Invoice/ViewAttachment/@contract.ContractId" type="button" class="btn btn-default" target="_blank"><span class="glyphicon glyphicon-eye-open"></span></a>
