--- a/PCA/PCA/Views/Accounts/Details.cshtml
+++ b/PCA/PCA/Views/Accounts/Details.cshtml
@@ -75,13 +75,13 @@
             @Html.DisplayFor(model => model.CanLogin)
         </dd>
 
-        @if (Model.FileSignatures.Any(f => f.FileTypeSignature == FileTypeSignature.Signature))
+        @if (Model.Files.Any(f => f.FileType == FileType.Signature))
         {
             <dt>
                 Signature
             </dt>
             <dd>
-                <img src="~/File?id=@Model.FileSignatures.First(f => f.FileTypeSignature == FileTypeSignature.Signature).FileSignatureId" alt="Signature" />
+                <img src="~/File?id=@Model.Files.First(f => f.FileType == FileType.Signature).FileId" alt="Signature" />
             </dd>
         }
 
