--- a/PCA/PCA/Views/Accounts/Edit.cshtml
+++ b/PCA/PCA/Views/Accounts/Edit.cshtml
@@ -83,12 +83,12 @@
             </div>
         </div>
 
-        @if (Model.FileSignatures.Any(f => f.FileTypeSignature == FileTypeSignature.Signature))
+        @if (Model.Files.Any(f => f.FileType == FileType.Signature))
         {
             <div class="form-group">
                 <span class="control-label col-md-2"><strong>Current Signature</strong></span>
                 <div class="col-md-10">
-                    <img src="~/File?id=@Model.FileSignatures.First(f => f.FileTypeSignature == FileTypeSignature.Signature).FileSignatureId" alt="Signature" />
+                    <img src="~/File?id=@Model.Files.First(f => f.FileType == FileType.Signature).FileId" alt="Signature" />
                 </div>
             </div>
         }
