--- a/PCA/PCA/Views/DailyReport/Index.cshtml
+++ b/PCA/PCA/Views/DailyReport/Index.cshtml
@@ -22,14 +22,22 @@
                 <tr>
                     <th>Date</th>
                     <th>Summary</th>
+                    <td>Actions</td>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var report in Model)
                 {
                     <tr>
-                        <td>@report.Date</td>
+                        <td>@Html.DisplayFor(modelItem => report.Date)</td>
                         <td><a href="\DailyReport\Detail\@report.DailyReportId">@report.Summary</a></td>
+                        <td>
+                            <div class="btn-group" role="group" aria-label="...">
+                                <a href="/DailyReport/Detail/@report.DailyReportId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-info-sign"></span></a>
+                                <a href="/DailyReport/Edit/@report.DailyReportId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
+                                <a href="/DailyReport/Delete/@report.DailyReportId" type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></a>
+                            </div>
+                        </td>
                     </tr>
                 }
             </tbody>
