--- a/PCA/PCA/Views/DailyReport/Detail.cshtml
+++ b/PCA/PCA/Views/DailyReport/Detail.cshtml
@@ -54,7 +54,7 @@
             {
                     <tr>
                         <td>@work.ContractorId</td>
-                        <td><a href="\Budget\Phase\@work.WorkItemId">@work.Summary</a></td>
+                        <td>@work.Summary</td>
                         <td>@work.Performance</td>
                         <td>
                             <div class="btn-group" role="group" aria-label="...">
@@ -71,3 +71,4 @@
         </table>
     </div>
 </div>
+
