--- a/PCA/PCA/Views/Shared/_LayoutForm.cshtml
+++ b/PCA/PCA/Views/Shared/_LayoutForm.cshtml
@@ -29,7 +29,7 @@
                 }
                 else
                 {
-                    <p class="navbar-text"><a href="/Dashboard/Select">Current Project: @ViewBag.CurrentProjectString</a></p>
+                    <p class="navbar-text"><a href="/Dashboard/Select" id="currentproject">Current Project: @ViewBag.CurrentProjectString</a></p>
                 }
                 <p class="navbar-text">User Goes Here</p>
 
