--- a/PCA/PCA/Views/DailyReport/Create.cshtml
+++ b/PCA/PCA/Views/DailyReport/Create.cshtml
@@ -1,13 +1,15 @@
 ﻿@model PCA.Models.DailyReport
 
 @{
+    ViewBag.PanelTitle = "Daily Report";
+    Layout = "~/Views/Shared/_LayoutForm.cshtml";
     ViewBag.Title = "Create";
 }
 @section sideNavDailyReport
 {
     sideNavItemSelected
 }
-
+<a href="/DailyReport/" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Back</a>
 <h2>Create</h2>
 
 @using (Html.BeginForm())
@@ -15,8 +17,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>DailyReport</h4>
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -44,12 +45,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
