--- a/PCA/PCA/Views/DailyReport/Delete.cshtml
+++ b/PCA/PCA/Views/DailyReport/Delete.cshtml
@@ -1,15 +1,15 @@
 ﻿@model PCA.Models.DailyReport
 
 @{
+    ViewBag.PanelTitle = "Daily Report";
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutForm.cshtml";
 }
-
+<a href="/DailyReport/" class="btn btn-default">Back</a>
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>DailyReport</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -51,8 +51,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger" />
         </div>
     }
 </div>
