--- a/PCA/PCA/Views/Shared/_LayoutForm.cshtml
+++ b/PCA/PCA/Views/Shared/_LayoutForm.cshtml
@@ -53,7 +53,7 @@
         <div class="container body-content">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4>Reports</h4>
+                    <h4>@ViewBag.PanelTitle</h4>
                 </div>
                 <div class="panel-body">
                     @RenderBody()
